--- a/Packet-Generator/client/public/sass/utilities/_variables.scss
+++ b/Packet-Generator/client/public/sass/utilities/_variables.scss
@@ -6,6 +6,7 @@ $lightCyan: #95d1cc;
 $beige: #f6f2d4;
 $white: #ffffff;
 $disabledGray: #808080;
+$dark-grey: #3d3d3d;
 
 // Sizes
 $max-width: 90%;
